samples/_failures_safe/1761143719_3b2c19_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6f95ce47.c: In function ‘main’:
./samples/SAFE/__tmp_6f95ce47.c:146:30: error: expected ‘)’ at end of input
  146 |         add_edge(&graph, from
      |                 ~            ^
      |                              )
./samples/SAFE/__tmp_6f95ce47.c:146:9: error: too few arguments to function ‘add_edge’
  146 |         add_edge(&graph, from
      |         ^~~~~~~~
./samples/SAFE/__tmp_6f95ce47.c:29:6: note: declared here
   29 | void add_edge(Graph* graph, int from, int to, int weight) {
      |      ^~~~~~~~
./samples/SAFE/__tmp_6f95ce47.c:146:9: error: expected declaration or statement at end of input
  146 |         add_edge(&graph, from
      |         ^~~~~~~~
./samples/SAFE/__tmp_6f95ce47.c:146:9: error: expected declaration or statement at end of input
